--- a/ShirtasticHome.html
+++ b/ShirtasticHome.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shirtastic Shop PH</title>
     <link rel="shortcut icon" href="ShirtasticLogo.jpg" type="image/x-icon">
+
+    link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script type="module" crossorigin src="/assets/main.js"></script>
+    <link rel="stylesheet" href="/assets/main.css" />
+    
     <style>
         /* General Reset */
         * {
@@ -160,6 +165,7 @@
     </style>
 </head>
 <body>
+    <div id="root"></div>
     <header>
         <nav>
             <div class="logo">Shirtastic</div>
