--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <nav>
     <div class="logo">Shirtastic</div>
     <ul class="nav-links">
-        <li><a href="ShirtasticHome.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#products" class="shop-now">Shop</a></li>
         <li><a href="ShirtasticAbout-Us.html">About</a></li>
         <li><a href="ShirtasticContact-Us.html">Contact</a></li>
