--- a/ShirtasticAbout-Us.html
+++ b/ShirtasticAbout-Us.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url("https://img.freepik.com/free-photo/multi-colored-shirts-hanging-modern-boutique-store-generated-by-ai_188544-43479.jpg?semt=ais_hybrid") no-repeat center center fixed;
+            background: url("https://media1.giphy.com/headers/clubdoauto/fjDIBvQjjE3G.gif") no-repeat center center fixed;
             background-size: cover;
             color: #fff;
         }
