--- a/ShirtasticAbout-Us.html
+++ b/ShirtasticAbout-Us.html
@@ -104,7 +104,7 @@
         }
 
         button {
-            background-color: #f30909;
+            background-color: #006eff;
             color: white;
             border: none;
             padding: 10px 15px;
