--- a/ShirtasticContact-Us.html
+++ b/ShirtasticContact-Us.html
@@ -112,7 +112,7 @@
         button {
             width: 100%;
             padding: 10px;
-            background-color: #ff0000;
+            background-color: #006eff;
             color: white;
             border: none;
             border-radius: 4px;
