--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         /* Hero Section */
         .hero {
             text-align: center;
-            background: url('https://t4.ftcdn.net/jpg/07/13/97/53/360_F_713975382_qzXFQBWRMbn5fDJi5jMvVDyRDZA0c36U.jpg') no-repeat center center/cover;
+            background: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/ec50c4129529089.616ef0ece9ea5.gif") no-repeat center center/cover;
             color: #fff;
             padding: 4rem 1rem;
         }
