--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         .hero {
             text-align: center;
             background: url("https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/ec50c4129529089.616ef0ece9ea5.gif") no-repeat center center/cover;
-            color: #fff;
+            color: #000000;
             padding: 4rem 1rem;
         }
 
